Show Player Info View (Header)

--- a/Presentation/Modules/Home/View/HomeViewController.storyboard
+++ b/Presentation/Modules/Home/View/HomeViewController.storyboard
@@ -16,6 +16,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8gN-R1-vXK" userLabel="PlayerInfoView" customClass="PlayerInfoView" customModule="Presentation" customModuleProvider="target">
+                                <rect key="frame" x="5" y="5" width="365" height="60"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="nwu-7L-mlZ"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Fo9-aF-SHd" customClass="PlayerTrophyLineChartView" customModule="Presentation" customModuleProvider="target">
+                                <rect key="frame" x="5" y="233.5" width="365" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="6Si-TW-H6z"/>
+                                </constraints>
+                            </view>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mPI-ol-D5i" userLabel="UpComingChestsScrollView">
                                 <rect key="frame" x="0.0" y="587" width="375" height="80"/>
                                 <subviews>
@@ -44,12 +57,6 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Fo9-aF-SHd" customClass="PlayerTrophyLineChartView" customModule="Presentation" customModuleProvider="target">
-                                <rect key="frame" x="5" y="233.5" width="365" height="200"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="200" id="6Si-TW-H6z"/>
-                                </constraints>
-                            </view>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
@@ -59,14 +66,18 @@
                             <constraint firstItem="KJl-vF-boh" firstAttribute="trailing" secondItem="mPI-ol-D5i" secondAttribute="trailing" id="Oi1-B4-dFw"/>
                             <constraint firstItem="KJl-vF-boh" firstAttribute="bottom" secondItem="mPI-ol-D5i" secondAttribute="bottom" id="XxJ-ES-jMa"/>
                             <constraint firstItem="mPI-ol-D5i" firstAttribute="leading" secondItem="KJl-vF-boh" secondAttribute="leading" id="ZuJ-h7-tRJ"/>
+                            <constraint firstItem="8gN-R1-vXK" firstAttribute="leading" secondItem="KJl-vF-boh" secondAttribute="leading" constant="5" id="cLq-o1-nnO"/>
                             <constraint firstItem="Fo9-aF-SHd" firstAttribute="leading" secondItem="KJl-vF-boh" secondAttribute="leading" constant="5" id="eEG-jA-xLS"/>
+                            <constraint firstItem="8gN-R1-vXK" firstAttribute="top" secondItem="KJl-vF-boh" secondAttribute="top" constant="5" id="ebW-4Z-DIC"/>
                             <constraint firstItem="mPI-ol-D5i" firstAttribute="top" secondItem="iaz-11-y5d" secondAttribute="bottom" constant="5" id="l4B-vE-kKB"/>
                             <constraint firstItem="KJl-vF-boh" firstAttribute="trailing" secondItem="Fo9-aF-SHd" secondAttribute="trailing" constant="5" id="st6-Hx-hjf"/>
+                            <constraint firstItem="KJl-vF-boh" firstAttribute="trailing" secondItem="8gN-R1-vXK" secondAttribute="trailing" constant="5" id="wKH-OK-L7k"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="KJl-vF-boh"/>
                     </view>
                     <connections>
                         <outlet property="chestsListView" destination="33b-D7-ZlR" id="kUD-cr-efD"/>
+                        <outlet property="playerInfoView" destination="8gN-R1-vXK" id="0jF-zI-3uw"/>
                         <outlet property="playerTrophyChartView" destination="Fo9-aF-SHd" id="RI2-Zd-KmJ"/>
                     </connections>
                 </viewController>
